# agentql-integrations

./: .tags.json  CONTRIBUTING.MD  LICENSE  README.md  osv-scanner.toml
.github/: CODEOWNERS
.github/workflows/: CD.yml  vuln-scanner-pr.yml
dify/: PRIVACY.md  README.md  manifest.yaml
dify/agentql/: README.md  manifest.yaml
dify/agentql/provider/: agentql.py  endpoints.py  messages.py
dify/agentql/tools/: extract_web_data.py  extract_web_data.yaml
dify/provider/: agentql.yaml
humanpages/: LICENSE  Makefile  README.md  pyproject.toml
humanpages/agentql_humanpages/: __init__.py  agent.py  client.py  const.py  messages.py
humanpages/docs/: human_fallback.ipynb
humanpages/examples/human_fallback_scraper/: README.md  human_fallback_scraper.py
humanpages/tests/unit_tests/: test_agent.py  test_client.py
langchain/: Makefile  README.md  pyproject.toml
langchain/docs/: document_loaders.ipynb  tools.ipynb
langchain/examples/job_scraper/: README.md  job_scraper.py
langchain/examples/price_deal_finder/: README.md  price_deal_finder.py
langchain/examples/recipe_bot/: README.md  recipe_bot.py
langchain/langchain_agentql/: __init__.py  const.py  document_loaders.py  llm_descriptions.py  load_data.py  messages.py  toolkits.py  utils.py
langchain/langchain_agentql/tools/: __init__.py  extract_web_data_browser_tool.py  extract_web_data_tool.py  get_web_element_browser_tool.py
zapier/: .zapierapprc  README.md  authentication.js  index.js  package-lock.json  package.json
zapier/constants/: endpoint.js  host.js  message.js
zapier/creates/: query_data.js
zapier/test/: authentication.test.js  util.test.js
zapier/utils/: util.js
(+4 files in other folders)
